third_party/rust/paste/tests/ui/no-env-var.rs
paste::item! {
    fn [<a env!("PASTE_UNKNOWN") b>]() {}
}

fn main() {}
